Fixed weird margins and titles overflow

--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -12,14 +12,19 @@ section {
 
 h1 {
   text-align: center;
-  font-size: 4rem;
+  font-size: clamp(2rem, 10vw, 4rem);
   color: white;
+  overflow-wrap: anywhere;
   margin: 0;
   text-shadow: 0ch 2px 5px rgba(0, 0, 0, 0.25);
 }
 
+.m0 {
+  margin: 0px !important;
+}
+
 .skillsContainer {
-  padding: 2rem;
+  margin: 2rem;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
